--- a/login.html
+++ b/login.html
@@ -55,6 +55,9 @@
                                         </h4>
                                         <form class="form" action="#">
                                                 <div class="form__group">
+                                                        <ul class="errorlist">
+                                                            <li>The user name is invalid</li>
+                                                        </ul>
 
                                                         <input class="form__input" type="text" placeholder="Username" id="name" required>
                                                         <label for="name" class="form__label">Username</label>
