--- a/signup.html
+++ b/signup.html
@@ -55,10 +55,9 @@
                                                 </span>
                                         </h4>
                                         <form class="form" action="#">
-                                                <div class="form__inputs">
                                                 <div class="form__group">
-														<input name="username" class="form-control" maxlength="150" autofocus="" required="" id="id_username" type="text">
-                                                        <label for="id_username">Username:</label>
+														<input name="username" class="form-control form__input" maxlength="150" autofocus="" required="" id="id_username"  placeholder="Username" type="text">
+                                                        <label class="form__label" for="id_username">Username</label>
                                                         <span class="helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
                                                 </div>
                                                 <div class="form__group">
@@ -89,7 +88,6 @@
                                                 </div>
                                                 <div class="form__group">
 	 <input name="password2" required="" id="id_password2" type="password"> <label for="id_password2">Password confirmation:</label><span class="helptext">Enter the same password as before, for verification.</span>                                                
-                                                </div>
                                                 </div>
                                             
                                                 <div class="form__group">
