--- a/detail.html
+++ b/detail.html
@@ -56,10 +56,10 @@
                 <nav class="mobile-nav">
                         <ul class="mobile-nav__nav">
                                 <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">&nbsp;</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--active" href="#">Home</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Rental</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">login</a> </li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">signup</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown mobile-nav__link--active" href="#">Home</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">Rental</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">login</a> </li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">signup</a></li>
                         </ul>
                 </nav>
 
@@ -90,11 +90,13 @@
                                                 <svg class="cta__icon">
                                                     <use xlink:href="images/sprite.svg#icon-thumbs-up"></use>
                                                 </svg>
-                                                <p class="cta__value">30 intrested</p>
+                                                <p class="cta__value">30 <span class="u-hide-me--phone">intrested</span></p>
                                         </div>
                                 </div>
                                 <div class="description">
-                                        <p>Ipsum cum consequuntur delectus unde voluptatem? Pariatur ab dignissimos sint qui voluptas Distinctio asperiores fuga delectus omnis facere Dolor itaque voluptatibus repudiandae nisi consequatur Ipsa aperiam debitis quibusdam ipsum magnam?</p>
+                                        <p class="u-margin-bottom-small">Ipsum cum consequuntur delectus unde voluptatem? Pariatur ab dignissimos sint qui voluptas Distinctio asperiores fuga delectus omnis facere Dolor itaque voluptatibus repudiandae nisi consequatur Ipsa aperiam debitis quibusdam ipsum magnam?</p>
+                                        </hr>
+                                    <a href="#tours" class="btn btn--rentaladd u-margin-bottom-small">Update</a>
                                 </div>
 
                                 <div class="tags">
@@ -128,11 +130,14 @@
                                                         <img src="images/test.jpg" alt="peron on  a tour" class="story__img">
 
                                                 </div>
-                                                <h4 class="options__username">Daniel Fakeman</h4>
+                                                <h4 class="options__username">
+                                                        Daniel Fakeman<br>
+                                                        15th june 2017
+                                                </h4>
                                             </div>
                                             <div class="options__buttons">
-                                                    <button class="btn btn--white options__button"> Contact </button>
-                                                    <button class="btn btn--white options__button"> Interested </button>
+                                                    <a class="btn btn--white options__button" href="#">Contact</a>
+                                                    <a class="btn btn--white options__button" href="#">Interested </a>
                                             </div>
                                         </div>
                                 </div>
