--- a/home.html
+++ b/home.html
@@ -5,8 +5,10 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <meta http-equiv="X-UA-Compatible" content="ie-edge">
                 <link rel="stylesheet" href= "style.css">
+                <!-- <link rel="stylesheet" href= "css/style.min.css"> -->
                 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
                 <link rel="stylesheet" href="iconfont.css">
+                <link rel="stylesheet" href="iconfont-arrow.css">
 	            <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
                 <title>RentalService frontend</title>
                 <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"> 
@@ -32,7 +34,7 @@
                                         </a>
                                 </li>
                                 <li class="main-nav__item">
-                                        <a  class="main-nav__link main-nav__link--active" href="#">
+                                        <a  class="main-nav__link" href="#">
                                                 <svg class="icon main-nav__link__icon">
                                                     <use xlink:href="images/sprite.svg#icon-office"></use>
                                                 </svg>
@@ -60,10 +62,11 @@
                 <nav class="mobile-nav">
                         <ul class="mobile-nav__nav">
                                 <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">&nbsp;</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--active" href="#">Home</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Rental</a></li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">login</a> </li>
-                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">signup</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">&nbsp;</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown mobile-nav__link--active" href="#">Home</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">Rental</a></li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">login</a> </li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--shown" href="#">signup</a></li>
                         </ul>
                 </nav>
 
@@ -71,8 +74,14 @@
                 
 
                 <div class='container'>
+                        <div class=" message message--error">
+                                <p></p>Ipsum cupiditate commodi sit vero modi illo Fugiat fugiat fuga iure excepturi similique? Consequuntur veritatis eaque esse id rem? Odit suscipit consectetur obcaecati amet eveniet eveniet. Delectus ea culpa maiores!</br>
+                                <a href="#"> go  to this link</a>
+                                </p>
 
-                        <h1 class="heading-primary u-text-center u-margin-bottom-big">Rental Service jjjjj:w </h1>
+                        
+                        </div>
+
 
 
                 </div>
@@ -80,7 +89,6 @@
 
 
 
-<!--
                 <footer class="footer">
                         <div class="footer__logo-box">
                         <picture class="footer__logo">
@@ -110,7 +118,6 @@
                                 </div>
                         </div>
                 </footer>
--->
 
 
 
