several changes in css and some new pages added

--- a/html_files/rentals.html
+++ b/html_files/rentals.html
@@ -102,13 +102,15 @@
                                         </div>
                                         <h4 class="card__heading">
                                                 <span class="card__heading-span">
-                                                        New home in new house in skdlkjs:w ksdlkjf;ei 
+                                                sjf;ls;afjslkfjas;lkdfjsalkfjas;lkfjsdlkfjas;ldkfas;lkfjsa
                                                 </span>
 
                                         </h4>
                                         <div class="card__details">
                                                 <ul>
-                                                        <li><span class="card__key"><i class="feature-box__icon icon-basic-info"></i></span><span class="card__value">Small house in peaceful environment for lakeside</span></li>
+                                                        <li><span class="card__key"><i class="feature-box__icon icon-basic-info"></i></span><span class="card__value">
+                                                        akesidedjlsfjaoifjoiaejfjsaldkfj;sldkfjowejflksdjf;lsk
+                                                        </span></li>
                                                         <li><span class="card__key"><i class="feature-box__icon icon-basic-star"></i></span><span class="card__value">4.5</span></li>
                                                         <li><span class="card__key"><i class="feature-box__icon icon-basic-message-multiple"></i></span><span class="card__value">30</span></li>
                                                 </ul>
@@ -130,7 +132,7 @@
                                         </h4>
                                         <div class="card__details">
                                                 <ul>
-                                                        <li><span class="card__key"><i class="feature-box__icon icon-basic-info"></i></span><span class="card__value">Small house in peaceful environment for lakeside</span></li>
+                                                        <li><span class="card__key"><i class="feature-box__icon icon-basic-info"></i></span><span class="card__value">Small house in peaceful ennvironment for lio lakeside</span></li>
                                                         <li><span class="card__key"><i class="feature-box__icon icon-basic-star"></i></span><span class="card__value">4.5</span></li>
                                                         <li><span class="card__key"><i class="feature-box__icon icon-basic-message-multiple"></i></span><span class="card__value">30</span></li>
                                                 </ul>
@@ -279,6 +281,20 @@
 
 
                         </section>
+        
+                <ul class="paginate">
+                        <div class="paginate__item paginate__item--disabled"><span class="paginate__number">prev</span></div>
+                        <div class="paginate__item"><span class="paginate__number">1</span></div>
+                        <div class="paginate__item paginate__item--side"><span class="paginate__number">2</span></div>
+                        <div class="paginate__item paginate__item--current"><span class="paginate__number">3</span></div>
+                        <div class="paginate__item paginate__item--side"><span class="paginate__number">4</span></div>
+                        <div class="paginate__item"><span class="paginate__number">5</span></div>
+                        <div class="paginate__item"><span class="paginate__number">5</span></div>
+                        <div class="paginate__item"><span class="paginate__number">next</span></div>
+                </ul>
+                </div>
+
+
 
 
                 <footer class="footer">
